syntax = "proto3";

option php_namespace = "GRPC\\EchoService";
option php_metadata_namespace = "GRPC\\GPBMetadata";

package service;

service EchoService {
    rpc EchoBack (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

